--- a/src/webapp/WEB-INF/pages/userPage.html
+++ b/src/webapp/WEB-INF/pages/userPage.html
@@ -17,6 +17,7 @@
                 </td>
                 <td>
                     <input readonly="true" size="8" disabled="true" th:field="*{id}">
+                    <input type="hidden" th:field="*{id}" >
                 </td>
             </tr>
             <tr>
